--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_mongo_accounts",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -14,7 +15,9 @@
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-ionicons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -28,7 +31,6 @@
   },
   "description": "This is an example of signin and signuot on reactjs and mongodb",
   "scripts": {
-    "type":"module",
     "start_react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -39,7 +41,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "semantic-ui-ember": "github:Semantic-Org/Semantic-UI-Ember"
   },
   "browserslist": {
     "production": [
@@ -54,4 +57,3 @@
     ]
   }
 }
-
